tests/expression/tuple_const_indexing_types.sy
start :: fn {
	a :: (1, "abc")
	b :: a[0] + 1
	b :: a[1] + 1
}

// error: $BinOp { lhs: Type::String, rhs: Type::Int, .. }
